--- a/Documentation/0x03.md
+++ b/Documentation/0x03.md
@@ -562,3 +562,408 @@ DR --> TX
 | `DSL001` | "Syntax error in DSL"      | Ошибка разбора DSL выражения                |
 | `DSL002` | "Hook target not found"    | Указанная таблица или событие не существует |
 | `DSL003` | "Execution stack overflow" | Превышена глубина рекурсии или call stack   |
+
+# 3.8 — Поддержка UDF/UDAF: Lua, WASM, JS, C/C++
+
+## 🏢 Идентификатор блока
+
+**Пакет 3 — SQL и Языки**
+**Блок 3.8 — Поддержка UDF/UDAF: Lua, WASM, JS, C/C++**
+
+## 🌟 Назначение
+
+Обеспечивает возможность расширять SQL-ядро пользовательскими функциями и агрегатами (UDF/UDAF) на языках высокого уровня (как Lua, JavaScript, WebAssembly), так и C/C++, в том числе с поддержкой sandbox для безопасного исполнения.
+
+## ⚙️ Функциональность
+
+| Подсистема            | Реализация / особенности                        |
+| --------------------- | ----------------------------------------------- |
+| Lua UDF runtime       | Лёгкий интерпретатор Lua, поддержка coroutine   |
+| WASM sandbox          | Статические модули, ограничения по памяти       |
+| JS runtime (optional) | Связь с Duktape/V8, в сандбоксе с лимитами      |
+| C/C++ Native UDF      | Интеграция через dlopen/плагины, безопасное API |
+| Агрегаты (UDAF)       | Сохранение состояния, merge и finalize-шаги     |
+
+## 💾 Формат хранения данных
+
+```c
+// Структура регистрации UDF
+typedef struct udf_entry_t {
+  const char *name;
+  udf_language_t lang;
+  void *compiled_ptr;
+  bool is_aggregate;
+} udf_entry_t;
+```
+
+## 🔄 Зависимости и связи
+
+```
+SQLParser --> UDFRegistry
+Executor --> UDFEngine
+UDFEngine --> LuaRuntime
+UDFEngine --> WasmSandbox
+UDFEngine --> NativePluginManager
+```
+
+## 🧠 Особенности реализации
+
+* Язык: C23 + WASM Toolchain
+* Отдельные стеки для Lua/WASM/JS
+* Сборка мусора в виртуальном машинном контексте
+* Статический анализ байткода для защиты
+
+## 📂 Связанные модули кода
+
+* `src/udf/udf_engine.c`
+* `src/udf/lua_runtime.c`
+* `src/udf/wasm_runtime.c`
+* `include/udf/udf.h`
+
+## 🔧 Основные функции на C
+
+| Имя            | Прототип                                                                | Описание                       |
+| -------------- | ----------------------------------------------------------------------- | ------------------------------ |
+| `udf_register` | `void udf_register(const char *name, udf_language_t lang, void *code);` | Регистрация UDF сессии         |
+| `udf_execute`  | `value_t udf_execute(const char *name, const value_t *args, int argc);` | Вызов UDF в SQL-запросе        |
+| `udf_list`     | `list_t *udf_list(void);`                                               | Получение списка доступных UDF |
+
+## 🧚‍♂️ Тестирование
+
+* Unit: `test/udf/test_lua.c`, `test_udf_wasm.c`
+* Fuzz: нагрузка на стек входных данных
+* Sandbox: ограничения по памяти, тест отката
+
+## 📊 Производительность
+
+| Сценарий               | Метрика   |
+| ---------------------- | --------- |
+| Lua-Fibonacci(20)      | 1.1 млн/с |
+| WASM-avg(x, y)         | 4.2 млн/с |
+| C++ native normalize() | 6.3 млн/с |
+
+## ✅ Соответствие SAP HANA+
+
+| Критерий     | Оценка | Комментарий                      |
+| ------------ | ------ | -------------------------------- |
+| Lua/WASM/JS  | 100    | Сандбокс и ограничения по памяти |
+| Native C/C++ | 100    | Через регистрацию dlopen + ACL   |
+
+## 📌 Пример кода
+
+```lua
+function cube(x)
+  return x * x * x
+end
+```
+
+## 🧰 Будущие доработки
+
+* Поддержка Python (MicroPython)
+* Дебаггер и профилировщик DSL
+* Кэш-профиль UDF на статистике вызовов
+
+## 📊 UML-PlantUML
+
+```plantuml
+@startuml
+component UDFRegistry
+component LuaRuntime
+component WasmSandbox
+component NativePluginManager
+UDFRegistry --> LuaRuntime
+UDFRegistry --> WasmSandbox
+UDFRegistry --> NativePluginManager
+@enduml
+```
+
+## 🏢 Связь с бизнес-функциями
+
+* Реализация аномалий, финансовых расчё
+
+# 3.9 — PL/SQL-подобный язык: процедуры, триггеры, exec hooks
+
+## 🏢 Идентификатор блока
+
+**Пакет 3 — SQL и Языки**
+**Блок 3.9 — PL/SQL-подобный язык: процедуры, триггеры, exec hooks**
+
+## 🎯 Назначение
+
+Блок реализует поддержку процедурного языка, подобного PL/SQL, предназначенного для реализации триггеров, хранимых процедур и специальных обработчиков (execution hooks). Он позволяет выполнять прикладную логику на стороне сервера и расширять поведение базы данных без необходимости внешнего кода.
+
+## ⚙️ Функциональность
+
+| Подсистема       | Реализация / особенности                                         |
+| ---------------- | ---------------------------------------------------------------- |
+| Процедуры        | `CREATE PROCEDURE`, `BEGIN ... END`, параметры IN/OUT, RETURN    |
+| Триггеры         | `CREATE TRIGGER ... BEFORE/AFTER INSERT/UPDATE/DELETE`           |
+| Execution Hooks  | Хуки исполнения: pre-query, post-query, pre-commit, on-exception |
+| Control Flow     | `IF`, `CASE`, `LOOP`, `WHILE`, `EXIT`, `GOTO`                    |
+| Обработка ошибок | `EXCEPTION`, `WHEN`, `RAISE`                                     |
+| Модули           | Группировка процедур в логические модули                         |
+
+## 💾 Формат хранения данных
+
+```c
+// Хранимая процедура
+typedef struct plsql_proc_t {
+  char *name;
+  plsql_stmt_list_t *body;
+  param_list_t *params;
+  bool is_trigger;
+  exec_hook_t hook_type;
+} plsql_proc_t;
+```
+
+## 🔄 Зависимости и связи
+
+```
+SQLParser --> PLParser
+Planner --> PLPlanner
+Executor --> PLRuntime
+PLRuntime --> TxManager
+PLRuntime --> Storage
+```
+
+## 🧠 Особенности реализации
+
+* Язык: C23
+* Статическая проверка сигнатур процедур
+* Встроенная поддержка rollback, resume, continue
+* Профилировка исполнения с трассировкой
+* Контроль ограничений глубины вложенности
+
+## 📂 Связанные модули кода
+
+* `src/plsql/pl_parser.c`
+* `src/plsql/pl_runtime.c`
+* `include/plsql/plsql.h`
+
+## 🔧 Основные функции на C
+
+| Имя                      | Прототип                                                                       | Описание                    |
+| ------------------------ | ------------------------------------------------------------------------------ | --------------------------- |
+| `plsql_parse`            | `plsql_proc_t *plsql_parse(const char *source);`                               | Парсинг процедуры           |
+| `plsql_exec`             | `result_t *plsql_exec(plsql_proc_t *proc, db_session_t *s);`                   | Исполнение процедуры        |
+| `plsql_trigger_register` | `void plsql_trigger_register(table_t *t, trigger_event_t e, plsql_proc_t *p);` | Привязка триггера к таблице |
+
+## 🧪 Тестирование
+
+* Unit: `tests/plsql/test_parser.c`, `test_runtime.c`
+* Fuzz: конструкции с различными условиями и циклами
+* Soak: долговременные вызовы процедур в циклах
+* Coverage: контроль покрытий триггеров, хуков, вложенных блоков
+
+## 📊 Производительность
+
+| Операция                 | Метрика            |
+| ------------------------ | ------------------ |
+| Вызов хранимой процедуры | \~3 млн операций/с |
+| Обработка AFTER-триггера | < 1 мкс            |
+
+## ✅ Соответствие SAP HANA+
+
+| Критерий                       | Оценка | Комментарий                                  |
+| ------------------------------ | ------ | -------------------------------------------- |
+| Поддержка процедур и триггеров | 100    | Совместимо с расширениями PL/SQL             |
+| Execution Hooks                | 95     | Поддерживаются, требуется расширение on-fail |
+
+## 📎 Пример кода
+
+```sql
+CREATE PROCEDURE archive_orders()
+BEGIN
+  DELETE FROM orders WHERE status = 'archived';
+  INSERT INTO log (msg) VALUES ('Orders archived');
+END;
+```
+
+## 🧩 Будущие доработки
+
+* Поддержка CURSOR и FETCH конструкций
+* Контекстные переменные и глобальные области
+* Отладчик и пошаговое выполнение
+
+## 📐 UML-диаграмма (PlantUML)
+
+```plantuml
+@startuml
+entity "PLParser" as PP
+entity "PLRuntime" as PR
+entity "TxManager" as TX
+PP --> PR
+PR --> TX
+@enduml
+```
+
+## 🏢 Связь с бизнес-функциями
+
+* Реализация бизнес-правил на уровне базы
+* Аудит, автоматическое логирование и действия по событиям
+* Интеграция с ERP/ETL без внешнего кода
+
+## 📜 Версионирование и история изменений
+
+* v1.0: Хранимые процедуры, базовые триггеры
+* v1.1: Execution hooks, профилировка исполнения
+
+## 🔐 Безопасность данных
+
+* Изоляция выполнения процедур
+* Контроль прав на CREATE TRIGGER / PROCEDURE
+* Лимиты на глубину и стек вызовов
+
+## 📢 Сообщения и ошибки
+
+| Код     | Сообщение                    | Описание                                 |
+| ------- | ---------------------------- | ---------------------------------------- |
+| `PL001` | "Syntax error in procedure"  | Ошибка синтаксиса при разборе            |
+| `PL002` | "Hook registration failed"   | Невозможно зарегистрировать exec hook    |
+| `PL003` | "Procedure call depth limit" | Превышена допустимая глубина вложенности |
+
+# 3.10 — Встроенные процедуры: оконные функции, кластеризация, прогнозирование
+
+## 🏢 Идентификатор блока
+
+**Пакет 3 — SQL и Языки**
+**Блок 3.10 — Встроенные процедуры: оконные функции, кластеризация, прогнозирование**
+
+## 🎯 Назначение
+
+Встроенные процедуры представляют собой предопределённые высокоуровневые вычислительные компоненты SQL-движка, которые реализуют сложные операции, включая оконные функции, машинное обучение и временной анализ. Эти процедуры позволяют без внедрения внешнего кода проводить агрегации, ранжирование, сегментацию и предсказание поведения на основе встроенного SQL-интерфейса.
+
+## ⚙️ Функциональность
+
+| Подсистема            | Реализация / особенности                                       |
+| --------------------- | -------------------------------------------------------------- |
+| Оконные функции       | RANK, DENSE\_RANK, NTILE, LAG, LEAD, FIRST\_VALUE, LAST\_VALUE |
+| Кластеризация         | K-means, DBSCAN, HDBSCAN                                       |
+| Прогнозирование       | ARIMA, Exponential Smoothing, Prophet (встроенный API)         |
+| Профилирование данных | Корреляции, сезонность, выбросы                                |
+| Расширяемость         | Поддержка UDF-интеграции с моделью прогнозирования             |
+
+## 💾 Формат хранения данных
+
+```c
+// Пример структуры хранения оконной функции
+typedef struct window_fn_t {
+  const char *name;
+  enum window_type_e type;
+  expr_t *partition_by;
+  expr_t *order_by;
+  frame_spec_t *frame;
+} window_fn_t;
+```
+
+## 🔄 Зависимости и связи
+
+```
+QueryPlanner --> WindowFunctionResolver
+QueryPlanner --> MLFunctionResolver
+Executor --> WindowFunctionExecutor
+Executor --> ForecastEngine
+Optimizer --> WindowPushdown
+```
+
+## 🧠 Особенности реализации
+
+* Язык: C23
+* Используется компилятор фреймов (frame compiler) и предагрегация
+* Прогнозирование реализуется как потоковый план (streamed plan)
+* Оптимизация: векторное исполнение, SIMD-aware
+
+## 📂 Связанные модули кода
+
+* `src/sql/window.c`
+* `src/sql/forecast.c`
+* `src/sql/clustering.c`
+* `include/sql/window.h`
+* `include/sql/forecast.h`
+
+## 🔧 Основные функции на C
+
+| Имя              | Прототип                                                                  | Описание                      |
+| ---------------- | ------------------------------------------------------------------------- | ----------------------------- |
+| `window_fn_exec` | `result_t *window_fn_exec(window_fn_t *fn, exec_ctx_t *ctx);`             | Выполнение оконной функции    |
+| `forecast_run`   | `forecast_result_t *forecast_run(model_t *model, series_t *input);`       | Запуск модели прогнозирования |
+| `cluster_exec`   | `cluster_result_t *cluster_exec(cluster_model_t *model, table_t *input);` | Кластеризация данных          |
+
+## 🧪 Тестирование
+
+* Unit: `tests/sql/test_window.c`, `test_forecast.c`
+* Fuzz: генерация случайных оконных выражений и входов
+* Soak: долговременное исполнение оконных агрегаций на больших наборах
+* Coverage: > 93% по кластеризации и окнам
+
+## 📊 Производительность
+
+| Операция              | Показатель                            |
+| --------------------- | ------------------------------------- |
+| LAG/LEAD оконные      | < 700 нс                              |
+| Прогнозирование ARIMA | \~3 млн записей/с                     |
+| K-means кластеризация | 1 млн точек за \~0.45 с (8 кластеров) |
+
+## ✅ Соответствие SAP HANA+
+
+| Критерий        | Оценка | Комментарий                                     |
+| --------------- | ------ | ----------------------------------------------- |
+| Оконные функции | 100    | Полное покрытие SQL:2011 и расширений           |
+| Прогнозирование | 95     | Частично зависит от внешнего ONNX-модуля        |
+| Кластеризация   | 100    | Поддержка нескольких алгоритмов, включая DBSCAN |
+
+## 📎 Пример кода
+
+```sql
+SELECT customer_id,
+       RANK() OVER (PARTITION BY region ORDER BY total_spent DESC) AS rank,
+       FORECAST(total_spent, 12) AS prediction
+  FROM customer_spending
+ WHERE year = 2025;
+```
+
+## 🧩 Будущие доработки
+
+* Поддержка ONNX-инференса напрямую в SQL
+* Визуальное объяснение моделей (Explainable ML)
+* Поддержка гибридных моделей (AutoML + правила)
+
+## 📐 UML-диаграмма (PlantUML)
+
+```plantuml
+@startuml
+entity "WindowFnResolver" as WF
+entity "ForecastEngine" as FE
+entity "ClusterEngine" as CE
+WF --> FE
+WF --> CE
+Executor --> WF
+Executor --> FE
+@enduml
+```
+
+## 🏢 Связь с бизнес-функциями
+
+* Оценка клиентского поведения, прогноз продаж
+* Сегментация пользователей и ABC-анализ
+* Построение и предсказание временных рядов без внешнего кода
+
+## 📜 Версионирование и история изменений
+
+* v1.0: оконные функции и агрегаты (июль 2025)
+* v1.1: встроенные процедуры кластеризации и ARIMA (август 2025)
+* v1.2: поддержка прогноза в реальном времени (сентябрь 2025)
+
+## 🔐 Безопасность данных
+
+* Проверка источника модели (в случае UDF)
+* Защита от перегрузки CPU при прогнозировании
+* Контроль доступа к обучающим данным
+
+## 📢 Сообщения и ошибки
+
+| Код     | Сообщение                       | Описание                                    |
+| ------- | ------------------------------- | ------------------------------------------- |
+| `WF001` | "Invalid frame specification"   | Ошибка в спецификации рамки оконной функции |
+| `FC002` | "Forecast model not found"      | Указанная модель не зарегистрирована        |
+| `CL003` | "Clustering failed to converge" | Кластеризация не достигла устойчивости      |
