--- a/Documentation/0x00.md
+++ b/Documentation/0x00.md
@@ -1,6 +1,13 @@
 # 📦 Пакет 0 — Инициализация и системный старт
 
-# 🆔 Блок 0.1 — Точка входа (main)
+# 🧱 Блок 0.1 — Инициализация и системный старт
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 0. Инициализация и системный старт
+* **Блок:** 0.1 Точка входа (main)
 
 ---
 
