--- a/Documentation/0x00.md
+++ b/Documentation/0x00.md
@@ -1,6 +1,10 @@
 # 📦 Пакет 0 — Инициализация и системный старт
 
-# 🧱 Блок 0.1 — Инициализация и системный старт
+| № блока | Название блока                                                                           |
+| ------- | ---------------------------------------------------------------------------------------- |
+| 0.1     | Точка входа (main)                                                     |
+
+# 🧱 Блок 0.1 — Точка входа (main)
 
 ---
 
