--- a/Documentation/0x03.md
+++ b/Documentation/0x03.md
@@ -1,3 +1,20 @@
+# 📦 Пакет 0 — Инициализация и системный старт
+
+| № блока | Название блока                                                                           |
+| ------- | ---------------------------------------------------------------------------------------- |
+| 0.1     | Точка входа (main)                                                     |
+
+# 🧱 Блок 0.1 — Точка входа (main)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 0. Инициализация и системный старт
+* **Блок:** 0.1 Точка входа (main)
+
+---
+
 | № блока | Название блока                                           |
 | ------: | -------------------------------------------------------- |
 |     3.1 | SQL Ядро и Парсер ANSI:2011+                             |
