--- a/Documentation/0x08.md
+++ b/Documentation/0x08.md
@@ -1,4 +1,19 @@
-Отлично. Ниже представлен блок **8.1 — Производительность и критические задержки (Latency Profiling & Low-Latency OLTP)** согласно утверждённому промышленному шаблону:
+# 📦 Пакет 0 — Инициализация и системный старт
+
+| № блока | Название блока                                                                           |
+| ------- | ---------------------------------------------------------------------------------------- |
+| 0.1     | Точка входа (main)                                                     |
+
+# 🧱 Блок 0.1 — Точка входа (main)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 0. Инициализация и системный старт
+* **Блок:** 0.1 Точка входа (main)
+
+---
 
 ---
 
