--- a/Documentation/0x09.md
+++ b/Documentation/0x09.md
@@ -1,3 +1,20 @@
+# 📦 Пакет 0 — Инициализация и системный старт
+
+| № блока | Название блока                                                                           |
+| ------- | ---------------------------------------------------------------------------------------- |
+| 0.1     | Точка входа (main)                                                     |
+
+# 🧱 Блок 0.1 — Точка входа (main)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 0. Инициализация и системный старт
+* **Блок:** 0.1 Точка входа (main)
+
+---
+
 # 9.1 — Расширения и пользовательские функции (UDF / UDAF)
 
 ## 🏢 Идентификатор блока
