--- a/Documentation/0x03.md
+++ b/Documentation/0x03.md
@@ -1,37 +1,25 @@
-# 📦 Пакет 0 — Инициализация и системный старт
-
-| № блока | Название блока                                                                           |
-| ------- | ---------------------------------------------------------------------------------------- |
-| 0.1     | Точка входа (main)                                                     |
-
-# 🧱 Блок 0.1 — Точка входа (main)
-
----
-
-## 🆔 Идентификатор блока
-
-* **Пакет:** 0. Инициализация и системный старт
-* **Блок:** 0.1 Точка входа (main)
-
----
+# 📦 Пакет 0 — SQL и языки
 
 | № блока | Название блока                                           |
 | ------: | -------------------------------------------------------- |
 |     3.1 | SQL Ядро и Парсер ANSI:2011+                             |
-|     3.2 | SQL-оптимизатор                                          |
+|     3.2 | SQL-оптимизатор (Cost-based / Rule-based / Adaptive)     |
 |     3.3 | Расширения SQL: JSON, FILTER, агрегаты, MATCH\_RECOGNIZE |
 |     3.4 | Собственный DSL для транзакций                           |
 |     3.5 | Поддержка UDF/UDAF: Lua, WASM, JS, C/C++                 |
 |     3.6 | Язык процедур и триггеров (PL/SQL-подобный)              |
 |     3.7 | Встроенные процедуры: окна, прогноз, кластеризация       |
 
+# 🧱 Блок 3.1 — SQL Ядро и Парсер ANSI:2011+  
 
-# 3.1 — SQL Ядро и Парсер ANSI:2011+
+---
 
 ## 🆔 Идентификатор блока
 
-**Пакет 3 — SQL и Языки**
-**Блок 3.1 — SQL Ядро и Парсер ANSI:2011+**
+* **Пакет:** 3. SQL и языки
+* **Блок:** 3.1 SQL Ядро и Парсер ANSI:2011+  
+
+---
 
 ## 🎯 Назначение
 
@@ -180,12 +168,16 @@ package "3.1 SQL Ядро и Парсер" {
 
 ---
 
-# 3.2 — SQL-оптимизатор
+# 🧱 Блок 3.2 — SQL-оптимизатор (Cost-based / Rule-based / Adaptive)
+
+---
 
 ## 🆔 Идентификатор блока
 
-**Пакет 3 — SQL и Языки**
-**Блок 3.2 — SQL-оптимизатор (Cost-based / Rule-based / Adaptive)**
+* **Пакет:** 3. SQL и языки
+* **Блок:** 3.2 SQL-оптимизатор (Cost-based / Rule-based / Adaptive)
+
+---
 
 ## 🎯 Назначение
 
@@ -322,6 +314,16 @@ package "SQL Optimizer (3.2)" {
 * v0.7 — первоначальный CostModel и RuleEngine (2025-06-28)
 * v0.9 — Join Reorder, Projection Prune (2025-07-08)
 * v1.0 — адаптивный reopt (2025-07-19)
+
+
+# 🧱 Блок 3.2 — SQL-оптимизатор (Cost-based / Rule-based / Adaptive)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 3. SQL и языки
+* **Блок:** 3.2 SQL-оптимизатор (Cost-based / Rule-based / Adaptive)
 
 # 3.3 — Расширения SQL: JSON, FILTER, агрегаты, аналитика, MATCH\_RECOGNIZE
 
