--- a/Documentation/0x02.md
+++ b/Documentation/0x02.md
@@ -15,7 +15,14 @@
 
 ---
 
-# 🆔 Блок 2.1 — MVCC (Compressed Chains + Snapshot Isolation)
+# 🧱 Блок 2.1 — MVCC (Compressed Chains + Snapshot Isolation)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 2. Транзакционность и надёжность
+* **Блок:** 2.1 MVCC (Compressed Chains + Snapshot Isolation)
 
 ---
 
@@ -188,7 +195,14 @@ state MVCC_Entry {
 
 ---
 
-# 🆔 Блок 2.2 — Уровни изоляции транзакций (Read Committed, Repeatable Read, Snapshot Isolation, Serializable)
+# 🧱 Блок 2.1 — Уровни изоляции транзакций (Read Committed, Repeatable Read, Snapshot Isolation, Serializable)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 2. Транзакционность и надёжность
+* **Блок:** 2.2 Уровни изоляции транзакций (Read Committed, Repeatable Read, Snapshot Isolation, Serializable)
 
 ---
 
@@ -366,11 +380,16 @@ state "Уровень изоляции" as IsolationLevel {
 * Гарантия корректной аналитики при real-time доступе
 * Поддержка смешанных SI/RC режимов без потери производительности
 
-Публикую промышленную документацию блока **2.3 — Журналирование WAL (Write-Ahead Logging)**:
+---
+
+# 🧱 Блок 2.3 — Журналирование WAL (Write-Ahead Logging)
 
 ---
 
-# 🆔 Блок 2.3 — Журналирование WAL (Write-Ahead Logging)
+## 🆔 Идентификатор блока
+
+* **Пакет:** 2. Транзакционность и надёжность
+* **Блок:** 2.3 Журналирование WAL (Write-Ahead Logging)
 
 ---
 
@@ -545,18 +564,16 @@ stop
 * Быстрое восстановление после падения
 * Трассировка и аудит в высоконагруженных операциях
 
-Публикую промышленную документацию для блока **2.4 — Восстановление после сбоя и Snapshot-based Recovery**:
+---
+
+# 🧱 Блок 2.3 — Восстановление после сбоя и Snapshot-based Recovery
 
 ---
 
-# 📘 2.4 — Восстановление после сбоя и Snapshot-based Recovery
+## 🆔 Идентификатор блока
 
----
-
-### 🆔 Идентификатор блока
-
-**Пакет 2** — Транзакционность и Надёжность
-**Блок 2.4** — Восстановление после сбоя и Snapshot-based Recovery
+* **Пакет:** 2. Транзакционность и надёжность
+* **Блок:** 2.4 Восстановление после сбоя и Snapshot-based Recovery
 
 ---
 
@@ -738,18 +755,14 @@ package "2.4 Восстановление" {
 ```
 ---
 
-Публикую финальную промышленную документацию блока **2.5 — Механизм фоновой очистки (Garbage Collection)** в формате Markdown.
+# 🧱 Блок 2.5 — Механизм фоновой очистки (Garbage Collection)
 
 ---
 
-# 📘 2.5 — Механизм фоновой очистки (Garbage Collection)
+## 🆔 Идентификатор блока
 
----
-
-### 🆔 Идентификатор блока
-
-**Пакет:** 2 — Транзакционность и Надёжность
-**Блок:** 2.5 — Механизм фоновой очистки (Garbage Collection)
+* **Пакет:** 2. Транзакционность и надёжность
+* **Блок:** 2.5 Механизм фоновой очистки (Garbage Collection)
 
 ---
 
@@ -927,18 +940,14 @@ Running --> Idle : done or yield()
 
 ---
 
-Публикую финальную промышленную документацию блока **2.6 — Репликация и отказоустойчивость**.
-
----
-
-# 📘 2.6 — Репликация и отказоустойчивость
+# 🧱 Блок 2.6 — Репликация и отказоустойчивость
 
 ---
 
 ## 🆔 Идентификатор блока
 
 **Пакет:** 2 — Транзакционность и Надёжность
-**Блок:** 2.6 — Репликация и отказоустойчивость (High Availability & Replication)
+**Блок:** 2.6 — Репликация и отказоустойчивость
 
 ---
 
@@ -1122,18 +1131,14 @@ package "2.6 Репликация и отказоустойчивость" {
 
 ---
 
-Ниже представлена финальная документация промышленного уровня для архитектурного блока:
-
----
-
-# 📘 2.7 — Механизм консенсуса и журнал Raft/Paxos
+# 🧱 Блок 2.7 — Репликация и отказоустойчивость
 
 ---
 
 ## 🆔 Идентификатор блока
 
-**Пакет 2: Транзакционность и Надёжность**
-**Блок 2.7: Механизм консенсуса и журнал Raft/Paxos**
+**Пакет:** 2 — Транзакционность и Надёжность
+**Блок:** 2.7 — Механизм консенсуса и журнал Raft/Paxos
 
 ---
 
@@ -1321,12 +1326,16 @@ Leader --> Follower : lost election
 
 ---
 
-# 2.8 — Наблюдатель транзакций (Transaction Watchdog)
+# 🧱 Блок 2.8 — Наблюдатель транзакций (Transaction Watchdog)
+
+---
 
 ## 🆔 Идентификатор блока
 
-**Пакет 2 — Транзакционность и Надёжность**
-**Блок 2.8 — Наблюдатель транзакций (Transaction Watchdog)**
+**Пакет:** 2 — Транзакционность и Надёжность
+**Блок:** 2.8 — Наблюдатель транзакций (Transaction Watchdog)
+
+---
 
 ## 🎯 Назначение
 
@@ -1463,12 +1472,18 @@ package "TX Watchdog (2.8)" {
 * v1.0 — NUMA-aware, интеграция с MVCC и Recovery (2025-07-20)
 * v1.1 — расширение логов, интеграция с OpenTelemetry (в планах)
 
-# 2.9 — Версионирование и системное время (System-Versioned Tables + AS OF Queries)
+---
+
+# 🧱 Блок 2.9 — Версионирование и системное время (System-Versioned Tables + AS OF Queries)
+
+---
 
 ## 🆔 Идентификатор блока
 
-**Пакет 2 — Транзакционность и Надёжность**
-**Блок 2.9 — Версионирование и системное время (System-Versioned Tables + AS OF Queries)**
+**Пакет:** 2 — Транзакционность и Надёжность
+**Блок:** 2.9 — Версионирование и системное время (System-Versioned Tables + AS OF Queries)
+
+---
 
 ## 🎯 Назначение
 
