--- a/Documentation/0x02.md
+++ b/Documentation/0x02.md
@@ -946,8 +946,8 @@ Running --> Idle : done or yield()
 
 ## 🆔 Идентификатор блока
 
-**Пакет:** 2 — Транзакционность и Надёжность
-**Блок:** 2.6 — Репликация и отказоустойчивость
+* **Пакет:** 2 — Транзакционность и Надёжность
+* **Блок:** 2.6 — Репликация и отказоустойчивость
 
 ---
 
@@ -1137,8 +1137,8 @@ package "2.6 Репликация и отказоустойчивость" {
 
 ## 🆔 Идентификатор блока
 
-**Пакет:** 2 — Транзакционность и Надёжность
-**Блок:** 2.7 — Механизм консенсуса и журнал Raft/Paxos
+* **Пакет:** 2 — Транзакционность и Надёжность
+* **Блок:** 2.7 — Механизм консенсуса и журнал Raft/Paxos
 
 ---
 
@@ -1332,8 +1332,8 @@ Leader --> Follower : lost election
 
 ## 🆔 Идентификатор блока
 
-**Пакет:** 2 — Транзакционность и Надёжность
-**Блок:** 2.8 — Наблюдатель транзакций (Transaction Watchdog)
+* **Пакет:** 2 — Транзакционность и Надёжность
+* **Блок:** 2.8 — Наблюдатель транзакций (Transaction Watchdog)
 
 ---
 
@@ -1480,8 +1480,8 @@ package "TX Watchdog (2.8)" {
 
 ## 🆔 Идентификатор блока
 
-**Пакет:** 2 — Транзакционность и Надёжность
-**Блок:** 2.9 — Версионирование и системное время (System-Versioned Tables + AS OF Queries)
+* **Пакет:** 2 — Транзакционность и Надёжность
+* **Блок:** 2.9 — Версионирование и системное время (System-Versioned Tables + AS OF Queries)
 
 ---
 
